--- a/.github/ISSUE_TEMPLATE/best_practice.yaml
+++ b/.github/ISSUE_TEMPLATE/best_practice.yaml
@@ -11,7 +11,7 @@ body:
     id: summary
     attributes:
       label: Summary
-      placeholder: A summary of the best practice - couple of sentances.
+      placeholder: A summary of the best practice - couple of sentences.
     validations:
       required: false
   - type: textarea
