Moved best practices, user stories and use case folders under doc
Signed-off-by: Ronit Nandwani <ronit@techprescient.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -13,10 +13,10 @@ documentation:
   - "*.md"
 
 use-case:
-  - use-case/*
+  - doc/use-case/*
 
 best-practice:
-  - cbpps/*
+  - doc/cbpps/*
 
 tools:
   - .github/*
